--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -74,7 +74,7 @@
           </ion-row>
           <ion-row>
             <ion-text>
-              <div style="margin-bottom: 10px;" class="content-code">{{'promotion.code'}}</div>
+              <div style="margin-bottom: 10px;" class="content-code">{{promotion.code}}</div>
             </ion-text>
           </ion-row>
           <ion-row>
