--- a/src/app/checkout/checkout.page.scss
+++ b/src/app/checkout/checkout.page.scss
@@ -39,8 +39,16 @@
     }
 
     .ship-fee {
-        margin: 5px 0 0 20px;
+        margin: 5px 0 0 5px;
     }
+}
+
+ion-item::part(native) {
+    padding-left: 5px;
+}
+
+ion-list-header {
+    padding-left: 5px;
 }
 
 .radio-pay {
