--- a/src/app/cart/cart.page.scss
+++ b/src/app/cart/cart.page.scss
@@ -10,8 +10,11 @@
 .input {
     background-color: rgba(240, 240, 240, .5);
     border-radius: 3px;
-    border: 1px solid rgb(240, 240, 240);
+    border: 0.5px solid #d2d2d2;
     font-size: .9em !important;
+    --padding-start: 12px;
+    --placeholder-color: #99999;
+    --placeholder-opacity: 0.5
 }
 .pad {
     padding: 0 6px;
@@ -67,4 +70,15 @@ div{
 .item-def {
     font-size: .81em;
     color: rgb(120, 120, 120);
+}
+.coupon {
+    display: flex;
+    align-items: center;
+}
+
+.promotion {
+    ion-input {
+        --padding-end: 12px;
+
+    }
 }
