--- a/src/app/checkout/checkout.page.html
+++ b/src/app/checkout/checkout.page.html
@@ -55,13 +55,14 @@
       <ion-label>Đơn vị vận chuyển:</ion-label>
       <ion-item>
         <ion-select label="Default label" placeholder="Đơn vị vận chuyển" (ionChange)="onShipPartnerChange($event)">
+          <ion-select-option value="taikho">Nhận hàng tại kho</ion-select-option>
           <ion-select-option value="ghtk">Giao hàng tiết kiệm</ion-select-option>
           <ion-select-option value="viettel">Viettel post</ion-select-option>
           <ion-select-option value="vnpost">VN post</ion-select-option>
         </ion-select>
       </ion-item>
     </ion-list-header>
-    <ion-row *ngIf="shipPartner">
+    <ion-row *ngIf="shipPartner && shipPartner !== 'taikho'">
       <ion-item>
         <ion-label>Giao nhanh</ion-label>
         <ion-radio slot="start" [value]="'fast'"></ion-radio>
