change display name paymentAcquirer

--- a/src/app/checkout/checkout.page.html
+++ b/src/app/checkout/checkout.page.html
@@ -115,7 +115,7 @@
 
       <ion-row>
         <ion-item *ngFor="let item of paymentAcquirers" (ionSelect)="radioSelect($event)">
-          <ion-label>{{item.name}}</ion-label>
+          <ion-label>{{item.name_display}}</ion-label>
           <ion-radio slot="start" name="{{item.name}}" value="{{item.id}}" checked="{{item.checked}}"></ion-radio>
         </ion-item>
       </ion-row>
