--- a/src/app/checkout/checkout.page.scss
+++ b/src/app/checkout/checkout.page.scss
@@ -51,6 +51,10 @@ ion-list-header {
     padding-left: 5px;
 }
 
+.cod {
+    width: 222px !important;
+}
+
 .radio-pay {
     ion-label {
         font-size: 13px;
