update display payDiscountType

--- a/src/app/checkout/checkout.page.html
+++ b/src/app/checkout/checkout.page.html
@@ -82,11 +82,11 @@
     </ion-list-header>
     <ion-row>
       <ion-item>
-        <ion-label>Tính khi đối soát</ion-label>
+        <ion-label>Chiết khấu sau</ion-label>
         <ion-radio slot="start" [value]="'after'"></ion-radio>
       </ion-item>
       <ion-item>
-        <ion-label>Trừ trên tiền hàng</ion-label>
+        <ion-label>Chiết khấu trực tiếp</ion-label>
         <ion-radio slot="start" [value]="'direct'"></ion-radio>
       </ion-item>
     </ion-row>
