update reset router change

--- a/src/app/customers/customers.page.html
+++ b/src/app/customers/customers.page.html
@@ -80,12 +80,12 @@
       </ion-infinite-scroll-content>
     </ion-infinite-scroll>
 
-    <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+    <!-- <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
       <ion-infinite-scroll-content
         loadingSpinner="bubbles"
         loadingText="Đang tải thêm...">
       </ion-infinite-scroll-content>
-    </ion-infinite-scroll>
+    </ion-infinite-scroll> -->
   </ng-container>
   
 
