update bank account number

--- a/src/app/account-edit/account-edit.page.html
+++ b/src/app/account-edit/account-edit.page.html
@@ -37,6 +37,12 @@
         </ion-col>
       </ion-row>
 
+      <ion-row>
+        <ion-col>
+          <ion-input clearInput formControlName="bank_number" placeholder="Số tài khoản ngân hàng:" class="input ion-padding-horizontal"></ion-input>
+        </ion-col>
+      </ion-row>
+
       <!-- <ion-item class="form___input" lines="full">
         <ion-label class="form__label" position="floating">Họ tên</ion-label>
         <ion-input formControlName="name" type="text" required></ion-input>
