--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -39,6 +39,11 @@
     </ion-row>
     <ion-row>
       <ion-col>
+        <ion-text class="ion-text-center" color="medium"><h6 class="small ion-no-margin text-underline"><a (click)="goResetPwd()">Quên mật khẩu?</a></h6></ion-text>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
         <ion-text class="ion-text-center" color="medium"><h6 class="small ion-no-margin"><a (click)="openModal(true)">Điều khoản sử dụng</a> và <a (click)="openModal(false)">chính sách bảo mật</a></h6></ion-text>
       </ion-col>
     </ion-row>
