update input key in reset password

--- a/src/app/reset-password/reset-password.page.html
+++ b/src/app/reset-password/reset-password.page.html
@@ -16,6 +16,11 @@
       </ion-row>
       <ion-row>
         <ion-col>
+          <ion-input clearInput formControlName="key" placeholder="Mật mã"  class="input ion-padding-horizontal"></ion-input>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
           <ion-button expand="block" type="submit" [disabled]="!form.valid" color="mytheme"><strong class="white">Lấy lại mật khẩu</strong></ion-button>
         </ion-col>
       </ion-row>
