--- a/src/app/commission/commission.page.html
+++ b/src/app/commission/commission.page.html
@@ -35,7 +35,7 @@
             <span class="price">Doanh thu tháng</span>
           </ion-text>
         </ion-col>
-        <ion-col size="4">
+        <ion-col size="4" style="align-items: center;">
           <ion-datetime-button datetime="fromDatetime"></ion-datetime-button>
           <ion-modal [keepContentsMounted]="true">
             <ng-template>
@@ -52,6 +52,7 @@
             </ng-template>
           </ion-modal>
         </ion-col>
+        <div>-</div>
         <ion-col size="4">
           <ion-datetime-button datetime="toDatetime"></ion-datetime-button>
           <ion-modal [keepContentsMounted]="true">
@@ -86,7 +87,7 @@
     
       <ion-row>
         <ion-col size="12" style="margin-top: 7px;" class="justify-content-center align-items-center">
-          <ion-button [disabled]="disableButtonDetail" style="height: 40px; width: 30%;" (click)="getOrders()" class="white foot-btn" color="orange" no-margin expand="block"><strong>Chi tiết</strong></ion-button>
+          <ion-button [disabled]="disableButtonDetail" style="height: 40px; width: 30%;" (click)="getOrders(null)" class="white foot-btn" color="orange" no-margin expand="block"><strong>Chi tiết</strong></ion-button>
         </ion-col>
       </ion-row>
     
