--- a/src/app/productdetail/productdetail.page.html
+++ b/src/app/productdetail/productdetail.page.html
@@ -41,7 +41,7 @@
 <ion-footer class="ion-align-items-center">
   <ion-row *ngIf="product" class="ion-align-items-center">
     <ion-col size="12">
-      <ion-button style="height: 48px;" (click)="goToCart()" [disabled]="!currentWarehouse || (currentWarehouse && !currentWarehouse.qtyAvailable)" float-right class="white foot-btn" color="orange" no-margin expand="block"><strong>Thêm vào giỏ hàng</strong></ion-button>
+      <ion-button style="height: 48px;" (click)="goToCart()" [disabled]="(!currentWarehouse || (currentWarehouse && !currentWarehouse.qtyAvailable)) && product.categoryOdooId !== 40" float-right class="white foot-btn" color="orange" no-margin expand="block"><strong>Thêm vào giỏ hàng</strong></ion-button>
     </ion-col>
   </ion-row>
 </ion-footer>
