hide ship partner vn post

--- a/src/app/checkout/checkout.page.html
+++ b/src/app/checkout/checkout.page.html
@@ -58,7 +58,7 @@
           <ion-select-option value="taikho">Nhận hàng tại kho</ion-select-option>
           <ion-select-option value="ghtk">Giao hàng tiết kiệm</ion-select-option>
           <ion-select-option value="viettel">Viettel post</ion-select-option>
-          <ion-select-option value="vnpost">VN post</ion-select-option>
+          <!-- <ion-select-option value="vnpost">VN post</ion-select-option> -->
         </ion-select>
       </ion-item>
     </ion-list-header>
